# career-evaluation

./: .gitignore  .markdownlint.json  .oxfmtrc.json  .oxlintrc.json  AX-DEV-ONBOARDING.md  CLAUDE.md  career  commitlint.config.js  next.config.ts  package-lock.json  package.json  prod_migration_insert.sql  skills-lock.json  supabase-migration.sql  기간별 순위 취합.xlsx
.claude/: settings.json
.github/workflows/: deploy.yml
.husky/: pre-commit
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/core/: auth.py  config.py  employment_periods.py  gemini.py  normalize.py  prompts.py  ranking.py  supabase.py
backend/app/routers/: admin.py  calculate.py  commentary.py  companies.py  employment.py  extract.py  feedback.py  history.py  merge.py
backend/app/schemas/: __init__.py  calculation.py  common.py  employment.py  employment_periods.py  extraction.py  feedback.py  history.py  merge.py
backend/app/services/: calculation.py  employment.py  extraction.py  merge.py  storage.py
backend/tests/unit/: test_calculation.py  test_calculation_rates.py  test_employment_patterns.py  test_extraction_validation.py  test_merge_prepare.py
data/applicants/: 03e06ef9-aded-4195-b08a-8e1b37411b37.json  13542978-abed-416e-8a9f-0e2c8e8d32f7.json  (+4 more)
deploy/: deploy.sh  provision.sh
docs/: 이력서_양식_표준화_건의서.md
prompts/: Step1_경력증명서_추출.md  Step1_이력서_추출.md  Step2_경력병합.md  Step3_고용형태.md  Step4_경력산정.md  경력산정_Step2_프롬프트.md  경력산정_Step3_프롬프트.md  경력증명서_추출_프롬프트.md  이력서_추출_프롬프트.md
src/: middleware.ts  proxy.ts
supabase/: config.toml
(+57 files in other folders)
